@@ -369,3 +369,8 @@ func (sma *AsteriskAgent) V1GetActiveSessionIDs(ignParam string,
 func (*AsteriskAgent) V1ReAuthorize(originID string, reply *string) (err error) {
 	return utils.ErrNotImplemented
 }
+
+// V1DisconnectPeer is used to implement the sessions.BiRPClient interface
+func (*AsteriskAgent) V1DisconnectPeer(args *utils.DPRArgs, reply *string) (err error) {
+	return utils.ErrNotImplemented
+}
